--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -27,4 +27,4 @@ jobs:
         run: mvn -B dependency:get -Dartifact=org.aspectj:aspectjweaver:${ASPECTJ_VERSION}
 
       - name: Build and run tests
-        run: mvn -B -U -DskipTests=false clean verify
+        run: mvn -B -U -DskipTests=false clean verify -Dheadless=true -Denv=DEV
