--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -23,6 +23,12 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      - name: Build & Install Dependencies
+        run: mvn -B install -D skipTests --no-transfer-progress
+
+      - name: Install Playwright Browsers
+        run: mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps"
+
       - name: Ensure AspectJ is downloaded
         run: mvn -B dependency:get -Dartifact=org.aspectj:aspectjweaver:${ASPECTJ_VERSION}
 
