--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -1,69 +1,60 @@
-name: Java CI
+name: Playwright Tests
 
+# Trigger the workflow on every push to any branch
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '**'  # Run on every branch for every commit
   pull_request:
-    branches: [ main ]
+    branches:
+      - '**'  # Run on every pull request for any branch
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    env:
-      ASPECTJ_VERSION: 1.9.21
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # Step 1: Check out the repository code
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup JDK 17 and Cache Maven
-        uses: actions/setup-java@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          distribution: temurin
+          node-version: '20'
+
+      # Step 2: Set up JDK 17 (adjust if you're using a different version)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
           java-version: '17'
-          cache: maven
+          distribution: 'adopt'
 
-      - name: Install system packages (Playwright deps + Maven)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y maven libnss3 libatk1.0-0 libatk-bridge2.0-0 \
-            libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libgbm1 \
-            libasound2 libpangocairo-1.0-0 libxss1 fonts-liberation libgtk-3-0
-
-      - name: Build & install dependencies
-        run: mvn -B install -DskipTests --no-transfer-progress
-
-      # === Playwright Installation Step ===
-      - name: Install Playwright Browsers
-        run: mvn exec:java -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install --with-deps"
-
-      - name: Ensure AspectJ is downloaded
-        run: mvn -B dependency:get -Dartifact=org.aspectj:aspectjweaver:${ASPECTJ_VERSION}
-
-      - name: Set MAVEN_OPTS to use AspectJ javaagent
-        run: |
-          echo "MAVEN_OPTS=-javaagent:$HOME/.m2/repository/org/aspectj/aspectjweaver/${ASPECTJ_VERSION}/aspectjweaver-${ASPECTJ_VERSION}.jar" >> $GITHUB_ENV
-
-      # === Playwright Test Execution ===
-      - name: Run Tests
-        run: mvn -B -U clean verify -DskipTests=false -Dheadless=true -Denv=DEV
-
-      # === Upload Playwright Report (if generated) ===
-      - name: Upload Playwright HTML Report
-        if: always()
-        uses: actions/upload-artifact@v4
+      # Step 3: Install Maven 3.9.9
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.7.0
         with:
-          name: playwright-report
-          path: target/playwright-report/
-          if-no-files-found: ignore
+          checkout-fetch-depth: 0
+          java-version: 17
+          java-distribution: temurin
+          maven-version: 3.9.9
 
-      # === Upload Videos/Screenshots (optional) ===
-      - name: Upload Playwright Test Artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
+      # Step 4: Verify Maven installation
+      - name: Verify Maven version
+        run: mvn --version
+
+      # Step 5: Cache Maven dependencies
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
         with:
-          name: playwright-artifacts
-          path: |
-            target/test-classes/**/*.mp4
-            target/test-classes/**/*.png
-          if-no-files-found: ignore
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven
+
+      - name: Install Playwright dependencies
+        run: npx playwright install-deps
+
+      # Step 6: Run Maven to execute Playwright tests
+      - name: Run Playwright Tests
+        run: mvn verify
