--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -53,7 +53,10 @@ jobs:
             ${{ runner.os }}-maven
 
       - name: Install Playwright dependencies
-        run: npx playwright install-deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpango-1.0-0 libcairo2 libgdk-pixbuf2.0-0
+          npx playwright install-deps
 
       # Step 6: Run Maven to execute Playwright tests
       - name: Run Playwright Tests
