--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -1,71 +1,33 @@
-name: Playwright Tests
+name: Playwright Java Tests
 
-# Trigger the workflow on every push to any branch
 on:
   push:
-    branches:
-      - '**'  # Run on every branch for every commit
+    branches: [ main, master ]
   pull_request:
-    branches:
-      - '**'  # Run on every pull request for any branch
+    branches: [ main, master ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
-      # Step 1: Check out the repository code
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v5
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Java
+        uses: actions/setup-java@v5
         with:
-          node-version: '20'
+          distribution: 'temurin'
+          java-version: '17'   # Or whichever version your project uses
 
-      # Step 2: Set up JDK 17 (adjust if you're using a different version)
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+      - name: Build project (skip tests)
+        run: mvn -B install -DskipTests --no-transfer-progress
 
-      # Step 3: Install Maven 3.9.9
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.7.0
-        with:
-          checkout-fetch-depth: 0
-          java-version: 17
-          java-distribution: temurin
-          maven-version: 3.9.9
+      - name: Install Playwright browsers + dependencies
+        run: mvn exec:java -e \
+             -Dexec.mainClass=com.microsoft.playwright.CLI \
+             -Dexec.args="install --with-deps"
 
-      # Step 4: Verify Maven installation
-      - name: Verify Maven version
-        run: mvn --version
-
-      # Step 5: Cache Maven dependencies
-      - name: Cache Maven dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven
-
-      - name: Install Playwright dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libpango-1.0-0 libcairo2 libgdk-pixbuf2.0-0
-          npx playwright install-deps
-          xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24"
-
-      # Step 6: Run Maven to execute Playwright tests
-      - name: Run Playwright Tests (headed mode for debugging)
-        run: mvn verify -Dheadless=ture
-
-      - name: Upload debug artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: debug-artifacts
-          path: target/
+      - name: Run tests
+        run: mvn test
